Fix layout problem

--- a/Contact Form/style.css
+++ b/Contact Form/style.css
@@ -59,7 +59,7 @@ aside {
 }
 
 h3 {
-    letter-spacing: 0.3rem;
+    letter-spacing: 0.5rem;
 }
 
 h3, i {
@@ -99,7 +99,7 @@ input[type="submit"] {
     font-weight: bold;
     border-radius: 0.2rem;
     letter-spacing: 0.2rem;
-    max-width: 5em;
+    max-width: 7em;
     margin-bottom: 2rem;
 }
 
